--- a/day1/Makefile
+++ b/day1/Makefile
@@ -1,14 +1,14 @@
 all: compile run clean
 
 compile:
-	echo "Compiling the application for day 1: "
 	docker pull cyberdojofoundation/freepascal
-	docker run --rm -v $(shell pwd):/app cyberdojofoundation/freepascal fpc /app/day1.pas
+	echo "Compiling the application for day 1: "
+	docker run --rm -v $(shell pwd):/app -w /app cyberdojofoundation/freepascal fpc /app/day1.pas
 
 run:
-	echo "Running the application for day 1: "
 	docker pull cyberdojofoundation/freepascal
-	docker run --rm -v $(shell pwd):/app cyberdojofoundation/freepascal bash -c "cd /app" && ./day1
+	echo "Running the application for day 1: "
+	docker run --rm -v $(shell pwd):/app -w /app cyberdojofoundation/freepascal ./day1
 
 targetclean:
 	rm -f day1.o
