Rename source code file

--- a/day7/Makefile
+++ b/day7/Makefile
@@ -1,13 +1,13 @@
 all: compile run clean
 
 compile:
-	docker run --rm -v $(shell pwd):/app -w /app nimlang/nim nim c --threads:on --gc:none app.nim
+	docker run --rm -v $(shell pwd):/app -w /app nimlang/nim nim c --threads:on --gc:none day7.nim
 
 run:
-	docker run --rm -v $(shell pwd):/app -w /app nimlang/nim ./app
+	docker run --rm -v $(shell pwd):/app -w /app nimlang/nim ./day7
 
 targetclean:
-	rm -f app
+	rm -f day7
 
 dockerclean:
 	docker image rm nimlang/nim
